# hape

./: sdkconfig
main/: CMakeLists.txt  ESP32-3248S035.h  chat_screen.c  chat_screen.h  friend_list.c  friend_list.h  hardware.c  hardware.cpp  hardware.h  lv_conf.h  main.cpp  ui_common.c  ui_common.h
